--- a/app/src/main/res/layout/student_row.xml
+++ b/app/src/main/res/layout/student_row.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/studentPhoto"
+        android:id="@+id/student_row_student_photo"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/static_student_image"
@@ -22,7 +22,7 @@
         android:paddingStart="8dp">
 
         <TextView
-            android:id="@+id/studentName"
+            android:id="@+id/student_row_student_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Student Name"
@@ -30,7 +30,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/studentId"
+            android:id="@+id/student_row_student_Id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Student ID"
@@ -39,7 +39,7 @@
     </LinearLayout>
 
     <CheckBox
-        android:id="@+id/studentCheckBox"
+        android:id="@+id/student_row_student_checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical" />
